# viscomp2022

Exercises/W2/: W2_exercise.ipynb
Exercises/W3/: W3_exercise.ipynb
Exercises/W5/: W5_exercise.ipynb
Exercises/W9/exercise8_framework/: CMakeLists.txt  Readme Linux.txt  Readme OSX.txt  Readme Windows.txt  exercises.h  generateBuildOSX.sh  transform.cpp
Exercises/W9/exercise8_framework/Helpers/: Drawable.h  GLShader.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Model.h  Quaternion.h  glutApplication.cpp  opengl.h
Exercises/W9/exercise8_framework/OpenGL 2.1/: transform.cpp
Exercises/W9/exercise8_framework/OpenGL 2.1/shaders/: diffusecolor.glslf  diffusecolor.glslv
Exercises/W9/exercise8_framework/models/: ._eth_tower.ptn  ._helicopter_body.ptn  ._helicopter_rotor1.ptn  ._helicopter_rotor2.ptn
Exercises/W9/exercise8_framework/shaders/: diffusecolor.glslf  diffusecolor.glslv
